--- a/Ksiegarnia/Views/Cart/Index.cshtml
+++ b/Ksiegarnia/Views/Cart/Index.cshtml
@@ -39,5 +39,5 @@
 </div>
 
 <p>
-    <a asp-action="Index">Kontynuuj zakupy</a>
+    <a asp-controller="Book" asp-action="Index">Kontynuuj zakupy</a>
 </p>
