--- a/Ksiegarnia/Views/Book/Index.cshtml
+++ b/Ksiegarnia/Views/Book/Index.cshtml
@@ -1,28 +1,31 @@
 ﻿@model IEnumerable<Book>
+@using Ksiegarnia.Models
 
 <h2>Lista Książek</h2>
 
 <table class="table">
     <thead>
         <tr>
-            
             <th>Tytuł</th>
             <th>Autor</th>
             <th>Cena</th>
-            
+            <th>Okładka</th> <!-- Dodaję kolumnę na okładkę -->
+            <th>Szczegóły</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var book in Model)
         {
             <tr>
-                
+                <td>
+                    <img src="@book.CoverImagePath" alt="@book.Title" style="width:20%;" />
+                </td>
                 <td>@book.Title</td>
                 <td>@book.Author</td>
                 <td>@book.Price</td>
+
                 <td>
-                    <a asp-action="Details" asp-route-id="@book.BookId">Szczegóły</a> 
-                   
+                    <a asp-action="Details" asp-route-id="@book.BookId">Szczegóły</a>
                 </td>
             </tr>
         }
